# masters-ray-tracing-ogl

./: .gitmodules  CMakeLists.txt  README.md
source/: main.cpp
source/shaders/: ComputeShader.comp  TempShader.frag  TempShader.vert  quad_shader.frag  quad_shader.vert
